<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="16dp">

    <TextView
        android:id="@+id/tipoOperacao"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/title_insert_account"
        android:textAlignment="center"
        android:textColor="@color/neutral"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:padding="8dp"
        android:background="@drawable/shape_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_account_number"
            android:textColor="@color/primary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:fontFamily="sans-serif-light"
            android:hint="@string/text_input_account_number"
            android:minHeight="48dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:padding="8dp"
        android:background="@drawable/shape_white"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name_client"
            android:textColor="@color/primary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/text_input_name_client"
            android:minHeight="48dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:padding="8dp"
        android:background="@drawable/shape_white"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cpf_client"
            android:textColor="@color/primary"
            android:textSize="12sp" />
        <EditText
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/text_input_cpf_client"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:padding="8dp"
        android:background="@drawable/shape_white"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_initial_balance"
            android:textColor="@color/primary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/saldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:fontFamily="sans-serif-light"
            android:hint="@string/text_input_initial_balance"
            android:minHeight="48dp"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAtualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_button_update"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnRemover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_button_delete"
        android:textColor="#FFFFFF" />

</LinearLayout>
